--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -1,2 +1,12 @@
-<h1>ようこそ</h1>
-<p>トップページです。</p>
+<h1>ようこそ<%= current_user.email %></h1>
+<p>Blockの一覧画面です</p>
+
+<% if @blocks.any? %>
+    <ol class="blocks">
+        <%= render @blocks %>
+    </ol>
+<% else %>
+    <h3>ブロックは存在しません</h3>
+<% end %>
+
+<%= link_to '新しいブロック作成', new_block_path %>
