--- a/app/views/blocks/new.html.erb
+++ b/app/views/blocks/new.html.erb
@@ -1,2 +1,26 @@
 <h1>ようこそ</h1>
 <p>新しいブロック作成ページです</p>
+
+<%= form_with(model: @block, local: true) do |f| %>
+    <% if @block.errors.any? %>
+        <div id="error_explanation">
+            <h2><%= pluralize(@block.errors.count, "error") %> prohibited this block from being saved:</h2>
+
+            <ul>
+            <% @block.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+            </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+    </div> 
+
+    <div class="actions">
+        <%= f.submit "作成" %>
+    </div>
+    <% end %>
+<%= link_to 'Back', blocks_path %>
