--- a/app/views/blocks/show.html.erb
+++ b/app/views/blocks/show.html.erb
@@ -1,2 +1,9 @@
 <h1>ようこそ</h1>
 <p>Blockの詳細ページかつ、検索ページです</p>
+
+<h1><%= @block.name %></h1>
+<p>URL名がずらっと続く</p>
+<h3>検索ボタン</h3>
+
+<%= link_to 'Edit', edit_block_path(@block) %>
+<%= link_to 'Back', blocks_path %>
