--- a/app/views/blocks/show.html.erb
+++ b/app/views/blocks/show.html.erb
@@ -1,14 +1,36 @@
-<h1>ようこそ</h1>
 <p>Blockの詳細ページかつ、検索ページです</p>
 
-<h1><%= @block.name %></h1>
-<p>URL名がずらっと続く</p>
-<% if @urlsets.any? %>
-	<ol class="urlsets">
-	  <%= render @urlsets %>
-	</ol>
+<h2>search_word:<%= @search_word %></h2>
+<h2>each_word_counts:<%= @each_word_counts %></h2>
+
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
 <% end %>
-<h3>検索ボタン</h3>
+
+<h1><%= @block.name %></h1>
+
+<ul>
+  <% @block.urlsets.each do |urlset| %>
+    
+    <h3>urlset.id:<%= urlset.id %></h2>
+    <h3>search_word:<%= @search_word %></h2>
+    <h3>each_word_counts:<%= @each_word_counts %></h2>
+
+    <li>
+        <%= urlset.name %>:<%= urlset.address %>
+        <% if @search_word && @each_word_counts[urlset.id] %>
+            <strong>(<%= @each_word_counts[urlset.id] %> matches)</strong>
+        <% end %>
+    </li>
+  <% end %>
+</ul>
+
+<%= form_with url: block_path(@block), method: :get, local: true do |f| %>
+  <%= f.text_field :search, placeholder: "探したい単語を入力", value: @search_word %>
+  <%= f.submit "検索" %>
+<% end %>
 
 <%= link_to 'Edit', edit_block_path(@block) %>
 <%= link_to 'Back', blocks_path %>
