--- a/app/views/blocks/edit.html.erb
+++ b/app/views/blocks/edit.html.erb
@@ -1,39 +1,4 @@
 <h1>ようこそ</h1>
 <p>ブロックの編集ページです</p>
-
-<%= form_with(model: @block, local: true) do |f| %>
-    <% if @block.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@block.errors.count, "error") %> prohibited this block from being saved:</h2>
-  
-        <ul>
-        <% @block.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-  
-    <h3>Blockの名前を記述してください</h3>
-    <div class="field">
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-    </div> 
-
-    <h3>urlのnameとaddressを記述してください</h3>
-    <div class="field">
-        <%= f.fields_for :urlsets do |url_form| %>
-            <div class="url-set">
-                <%= url_form.label :name %>
-                <%= url_form.text_field :name %>
-                <%= url_form.label :address %>
-                <%= url_form.text_field :address %>
-            </div>
-        <% end %>
-    </div>
-
-    <div class="actions">
-        <%= f.submit "更新"%>
-    </div>
-<% end %>
+<%= render 'form', block: @block, submit_label: "更新" %>
 <%= link_to 'Back', blocks_path %>
