--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ようこそ<%= current_user.email %></h1>
+<h1>ようこそ<%= current_user.name %></h1>
 <p>Blockの一覧画面です</p>
 
 <% if @blocks.any? %>
@@ -6,7 +6,7 @@
         <%= render @blocks %>
     </ol>
 <% else %>
-    <h3>ブロックは存在しません</h3>
+    <h3>まだブロックは存在しません。作成しましょう！</h3>
 <% end %>
 
 <%= link_to '新しいブロック作成', new_block_path %>
