--- a/app/views/blocks/show.html.erb
+++ b/app/views/blocks/show.html.erb
@@ -6,7 +6,7 @@
   <% @block.urlsets.each do |urlset| %>
     <li>
         <%= urlset.name %>:<%= urlset.address %>
-        <% if @search_word %>
+        <% if @search_word && @each_word_counts %>
             <% if @each_word_counts[urlset.id] == -1 %>
                 <strong>(error)</strong>
             <% elsif @each_word_counts[urlset.id] %>
