--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -1,5 +1,4 @@
-<h1>ようこそ<%= current_user.name %></h1>
-<p>Blockの一覧画面です</p>
+<h2><%= current_user.name %>さんのBlockの一覧画面</h2>
 
 <% if @blocks.any? %>
     <ol class="blocks">
