--- a/app/views/blocks/edit.html.erb
+++ b/app/views/blocks/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>ようこそ</h1>
-<p>ブロックの編集ページです</p>
+<h2>ブロック編集ページ</h2>
 <%= render 'form', block: @block, submit_label: "更新" %>
-<%= link_to 'Back', blocks_path %>
+<div class="back-button-parent">
+    <%= link_to '戻る', blocks_path, class: 'back-button' %>
+<end>
