--- a/app/views/blocks/new.html.erb
+++ b/app/views/blocks/new.html.erb
@@ -1,4 +1,5 @@
-<h1>ようこそ</h1>
-<p>新しいブロック作成ページです</p>
+<h2>新しいブロック作成ページ</h2>
 <%= render 'form', block: @block, submit_label: "作成" %>
-<%= link_to 'Back', blocks_path %>
+<div class="back-button-parent">
+    <%= link_to '戻る', blocks_path, class: 'back-button' %>
+<end>
