--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,8 +36,8 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<div class="cancel-button"><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to 'Back', blocks_path %>
+<div class="back-button-parent">
+  <%= link_to '戻る', blocks_path, class: 'back-button' %>
+</div>
